Game optimized for the landscape mode.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         >
         <activity
             android:name=".GameScreen"
-            android:exported="false" android:configChanges="orientation|screenSize">
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
